--- a/angular.json
+++ b/angular.json
@@ -14,9 +14,7 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -25,7 +23,12 @@
               }
             ],
             "styles": [
+              "node_modules/materialize-css/dist/css/materialize.min.css",
+              "src/custom-theme.scss",
               "src/styles.css"
+            ],
+            "scripts": [
+              "node_modules/materialize-css/dist/js/materialize.min.js"
             ]
           },
           "configurations": {
@@ -70,10 +73,7 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
@@ -82,7 +82,11 @@
               }
             ],
             "styles": [
+              "node_modules/materialize-css/dist/css/materialize.min.css",
               "src/styles.css"
+            ],
+            "scripts": [
+              "node_modules/materialize-css/dist/js/materialize.min.js"
             ]
           }
         }
